<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    tools:context=".HistoryActivity">

    <View
        android:id="@+id/history_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/history_placeholder_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <TextView
            android:id="@+id/history_placeholder_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="@font/space_mono"
            android:text="@string/title_history_placeholder"
            android:textAlignment="center"
            android:textColor="?attr/colourTextSecondary"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history_placeholder_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="@font/space_mono"
            android:text="@string/desc_history_placeholder"
            android:textAlignment="center"
            android:textColor="?attr/colourTextSecondary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_placeholder_title" />

        <Button
            android:id="@+id/history_placeholder_cta"
            android:layout_width="168dp"
            android:layout_height="match_parent"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"
            android:layout_weight="1"
            android:background="@drawable/button_background_rounded_rippled"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/space_mono_bold"
            android:onClick="onOpenCameraButtonClick"
            android:stateListAnimator="@null"
            android:text="@string/cta_history_placeholder"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_placeholder_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>